--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             30 сек
           </button>
         </li>
+        <li>
+          <button class="time-btn" data-time="35">
+            35 сек
+          </button>
+        </li>
       </ul>
     </div>
 
