--- a/index.html
+++ b/index.html
@@ -16,31 +16,22 @@
       <h1>Выберите время</h1>
       <ul class="time-list" id="time-List">
         <li>
-          <button class="time-btn" data-time="10">
-            10 сек
-          </button>
+          <button class="time-btn" data-time="10">10 сек</button>
         </li>
         <li>
-          <button class="time-btn" data-time="20">
-            20 сек
-          </button>
+          <button class="time-btn" data-time="20">20 сек</button>
         </li>
         <li>
-          <button class="time-btn" data-time="30">
-            30 сек
-          </button>
+          <button class="time-btn" data-time="30">30 сек</button>
         </li>
         <li>
-          <button class="time-btn" data-time="35">
-            35 сек
-          </button>
+          <button class="time-btn" data-time="35">35 сек</button>
         </li>
       </ul>
     </div>
 
     <div class="screen">
       <h3>Осталось <span id="time">00:00</span></h3>
-      <div class="board" id="board"></div>
     </div>
     <script src="script/script.js"></script>
   </body>
