add: board block

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <div class="screen">
       <h3>Осталось <span id="time">00:00</span></h3>
+      <div class="board" id="board"></div>
     </div>
     <script src="script/script.js"></script>
   </body>
